fix: removes margin top of experience bullet points

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,6 +21,7 @@
   "experience": {
     "title": "Work Experience",
     "present": "Present",
+    "technologies": "Technologies",
     "cpqd": {
       "position": "Front-End Developer",
       "company": "CPQD",
