--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -21,6 +21,7 @@
   "experience": {
     "title": "Experiência Profissional",
     "present": "Presente",
+    "technologies": "Tecnologias",
     "cpqd": {
       "position": "Desenvolvedor Front-End",
       "company": "CPQD",
